--- a/mypage/templates/mypage/login.html
+++ b/mypage/templates/mypage/login.html
@@ -24,9 +24,8 @@
 
         <div >
             <input type="submit" value="로그인"><p></p>
-            <a href="">아이디찾기</a><p></p>
-            <a href="">비밀번호찾기</a><p></p>
-            <a href="/mypage/memberjoin">가입하기</a>
+            <a href="">아이디/비밀번호찾기</a><p></p>
+            <a href="/memberjoin">가입하기</a>
 
         </div>
     </form>
