--- a/mypage/templates/mypage/memberjoin.html
+++ b/mypage/templates/mypage/memberjoin.html
@@ -7,11 +7,11 @@
 <body>
 <div id="content">
     <h2> 회원 가입 페이지 </h2>
-    <form method="post" action="meminsert">
+    <form method="post" action="member/memberInsert">
         {% csrf_token %}
         <div>
             <input type="text" name="id" id="id" placeholder="ID"> <!--해당 Text상자에 기본으로 띄워놓을 문구를 placeholder라고 한다. -->
-            <input type="button" value="중복확인" id="chkBtn">
+            <input type="button" value="중복확인" id="IDchekBtn">
         </div>
         <div>
             <span id="target"></span>
@@ -23,14 +23,9 @@
             <input type="text" name="name" id="name" placeholder="이름">
         </div>
         <div>
-            <input type="text" name="tel" id="tel" placeholder="Tel">
+            <input type="text" name="nickname" id="nickname" placeholder="닉네임">
         </div>
-        <div>
-            <input type="text" name="email" id="email" placeholder="Email">
-        </div>
-        <div>
-            <input type="text" name="addr" id="addr" placeholder="Address">
-        </div>
+
         <div>
             <input type="submit" value="가입하기">
         </div>
@@ -40,13 +35,25 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
     $(function(){
-        $('#chkBtn').click(function(){
-            //alert('Test => '+$('#id').val());
-            //$('#target').html('호롤롤로');
+        $('#IDchekBtn').click(function(){
             $.ajax({
-                url:'memIdchk?id='+$('#id').val(),
+                url:'memIDcheck?id='+$('#id').val(),
                 success:function(data){
-                    //console.log('data => '+data);
+                    if (data == '0'){
+                        $('#target').html('사용 가능한 아이디입니다.');
+                        $('#target').css('color','blue');
+                    }else{
+                        $('#target').html('이미 사용 중인 아이디입니다.');
+                        $('#target').css('color','red');
+                    }
+                }
+            });
+        })
+
+        $('#nickchekBtn').click(function(){
+            $.ajax({
+                url:'memNickchk?id='+$('#id').val(),
+                success:function(data){
                     if (data == '0'){
                         $('#target').html('사용 가능한 아이디입니다.');
                         $('#target').css('color','blue');
