--- a/signup/templates/signup/memberjoin.html
+++ b/signup/templates/signup/memberjoin.html
@@ -7,7 +7,7 @@
 <body>
 <div id="content">
     <h2> 회원 가입 페이지 </h2>
-    <form method="post" action="member/memberInsert">
+    <form method="post" action="signup/memberInsert">
         {% csrf_token %}
         <div>
             <input type="text" name="id" id="id" placeholder="ID"> <!--해당 Text상자에 기본으로 띄워놓을 문구를 placeholder라고 한다. -->
