--- a/bb/templates/bb/notice_bb.html
+++ b/bb/templates/bb/notice_bb.html
@@ -12,13 +12,23 @@
             {% csrf_token %}
             <table class="table table-striped table-bordered">
                 <thead class="table-warning">
-                <tr>
-                    <th scope="col">번호</th>
-                    <th scope="col">이름</th>
-                    <th scope="col">전화번호</th>
-                    <th scope="col">이메일</th>
-                    <th scope="col">주소</th>
-                </tr>
+                <li data-v-f077870a=""><a data-v-f077870a="" href="/club/view?id=16543" class="item">
+<span data-v-f077870a="" class="dday active"> D-7</span>
+<div data-v-f077870a="" class="profile">
+<figure data-v-f077870a="" class="picture" style="background-image: url(&quot;https://cf-cpi.campuspick.com/club/1642741701748928.jpg&quot;);"></figure>
+ <span data-v-f077870a="" class="name">📚책 읽기로 리드하라</span>
+</div>
+ <hr data-v-f077870a=""> <span data-v-f077870a="" class="viewcount">35</span>
+ <h3 data-v-f077870a="" class="light">📚책 읽기로 리드하라-추가모집‼️</h3>
+</a>
+</li>
+<!--                <tr>-->
+<!--                    <th scope="col">번호</th>-->
+<!--                    <th scope="col">이름</th>-->
+<!--                    <th scope="col">전화번호</th>-->
+<!--                    <th scope="col">이메일</th>-->
+<!--                    <th scope="col">주소</th>-->
+<!--                </tr>-->
                 </thead>
                 <tbody>
                 {% for e in addr_list %}
