--- a/bb/static/css/container.article.css
+++ b/bb/static/css/container.article.css
@@ -204,6 +204,7 @@
 	color: #c62917; font-size: 12px; font-weight: bold;
 }
 #container > div.articles > article {
+    list-style:none;
 	margin-bottom: -1px; box-sizing: border-box; border: 1px solid #e3e3e3; background-color: #fff;
 }
 #container > div.articles > article.noticearticle {
@@ -379,14 +380,12 @@
 	float: left; margin-left: 8px; padding: 0 2px; height: 20px; line-height: 20px;
 	color: #a6a6a6; font-size: 12px; background-repeat: no-repeat; background-position: left center; background-size: 11px 11px; cursor: pointer;
 }
-#container > div.articles > article ul.status li.attach {
-	padding-left: 15px; color: #737373; background-image: url('/images/new/container.articles.attach.png');
-}
+
 #container > div.articles > article ul.status li.vote {
-	padding-left: 15px; color: #c62917; background-image: url('/images/new/container.articles.vote.png');
+	padding-left: 15px; color: #c62917; background-image: url('/static/im/1111.png');
 }
 #container > div.articles > article ul.status li.comment {
-	padding-left: 15px; color: #0ca5af; background-image: url('/images/new/container.articles.comment.png');
+	padding-left: 15px; color: #0ca5af; background-image: url('/static/im/2222.png');
 }
 #container > div.articles > article ul.status li.scrap {
 	padding-left: 15px; color: #ffcc1c; background-image: url('/images/new/container.articles.scrap.png');
