--- a/bb/templates/bb/help_bb.html
+++ b/bb/templates/bb/help_bb.html
@@ -4,6 +4,11 @@
 <meta charset="UTF-8">
 <title>도와주세요게시판</title>
     <link type="text/css" href="/static/css/container.article.css" rel="stylesheet">
+	<style>
+ul{
+   list-style:none;
+   }
+</style>
 </head>
 <body style>
 <div id="container" class="article">
@@ -15,6 +20,7 @@
 	<time class="small">방금</time>
 	<h3 class="small">익명</h3>
 		<ul class="status">
+
 			<li title="공감" class="vote">0</li>
 			<li title="댓글" class="comment">0</li>
 		</ul>
