--- a/market/templates/market/write.html
+++ b/market/templates/market/write.html
@@ -1,4 +1,4 @@
-{% include "header.html" %}
+{% include 'navi.html'%}
 <div id="contents">
     <h2>체리 마켓</h2>
     <form method="post" name="form1" id="form1" action="meminsert" enctype="multipart/form-data">
