--- a/market/templates/market/write.html
+++ b/market/templates/market/write.html
@@ -4,7 +4,7 @@
     <form method="post" name="form1" id="form1" action="meminsert" enctype="multipart/form-data">
       {% csrf_token %}
 <fieldset>
-<legend>파일 업로드 예제</legend>
+<legend>체리 마켓 글쓰</legend>
     <select name="malmuri">
         <option value="None">말머리선택</option>
         <option value="0">팝니다</option>
