--- a/bb/templates/bb/notice_bb.html
+++ b/bb/templates/bb/notice_bb.html
@@ -5,8 +5,9 @@
 <title>공지사항 게시판 화면</title>
 </head>
 <body>
+
 <div id="content">
-    <h2 class="text-center">주소록 Total : {{address_count}} </h2>
+    <h2 class="text-center">주소록 Total :  </h2>
     <div class="row1">
         <form method="post" action="notice_write">
             {% csrf_token %}
