--- a/bb/templates/bb/notice_write.html
+++ b/bb/templates/bb/notice_write.html
@@ -39,7 +39,7 @@
 
         });
             $('#listBtn').click(function(){
-            document.form1.action='notice_list'
+            document.form1.action='notice_bb'
             document.form1.submit()
         });
     });
