--- a/help/templates/help/showpostwrite.html
+++ b/help/templates/help/showpostwrite.html
@@ -1,7 +1,7 @@
 {% include 'navi.html'%}
 <div id="contents">
     <h1>체리야 도와줘 글쓰기 창입니다.</h1>
-       <form method="post" name="form1" id="form1" action="meminsert" enctype="multipart/form-data">
+       <form method="post" name="form1" id="form1" action="postinsert" enctype="multipart/form-data">
       {% csrf_token %}
 <fieldset>
 <legend>체리야 도와줘</legend>
