--- a/delivery/templates/delivery/showpostlist.html
+++ b/delivery/templates/delivery/showpostlist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>체리야 도와줘 게시글 목록</title>
     {% include 'navi.html'%}
-    <h1>체리야 도와줘 게시글 목록</h1>
+    <h1>체리는 배달중 게시글 목록</h1>
 
     <input type="button" value="글쓰기" id="wrtBtn" name="wrtBtn">
 </head>
@@ -13,7 +13,7 @@
 <script>
     $(function(){
         $('#wrtBtn').click(function(){
-            location = '/help/write';
+            location = '/delivery/showpostwrite';
         });
     });
 </script>
