--- a/delivery/templates/delivery/showpostwrite.html
+++ b/delivery/templates/delivery/showpostwrite.html
@@ -1,7 +1,7 @@
 {% include 'navi.html'%}
 <div id="contents">
     <h2>체리는 배달중</h2>
-    <form method="post" name="form1" id="form1" action="meminsert" enctype="multipart/form-data">
+    <form method="post" name="form1" id="form1" action="postinsert" enctype="multipart/form-data">
       {% csrf_token %}
         <fieldset>
         <legend>배달 파티원 구하기</legend>
@@ -28,7 +28,7 @@
         <label for="time">
                참여 가능 시간 :
             </label>
-            ~<input type="time" name="time" id="time">까
+            ~<input type="time" name="time" id="time">까지
         </p>
         <p>
         <p>작성내용 :</p>
