--- a/help/templates/help/showpostlist.html
+++ b/help/templates/help/showpostlist.html
@@ -1,21 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>체리야 도와줘 게시글 목록</title>
+<meta charset="UTF-8">
+<title>체리야 도와줘</title>
     {% include 'navi.html'%}
-    <h1>체리야 도와줘 게시글 목록</h1>
-
-    <input type="button" value="글쓰기" id="wrtBtn" name="wrtBtn">
+    <link type="text/css" href="/static/css/container.article.css" rel="stylesheet">
+   <style>
+ul{
+   list-style:none;
+   }
+</style>
 </head>
-<body>
+<body style>
+<div id="container" class="article">
+    <h1>체리야 도와줘</h1>
+   <div class="wrap articles">
+
+<article>
+   <a class="article" href="/help/showpostwrite">
+       <h2 class="medium">제목</h2>
+       <p class="small">내용</p>
+       <time class="small">방금</time>
+       <h3 class="small">익명</h3>
+          <ul class="status">
+             <li title="공감" class="vote">0</li>
+             <li title="댓글" class="comment">0</li>
+          </ul>
+       <hr>
+       <input type="hidden" name="227189837_comment_anonym" value="0">
+   </a>
+</article>
+
+
+      </div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
-    $(function(){
-        $('#wrtBtn').click(function(){
-            location = '/help/showpostwrite';
-        });
-    });
+
 </script>
 </body>
 </html>
+        <tr>
+            <th scope="row"></th>
+            <td><a href="detail?idx={{i.idx}}">{{i.name}}</a></td><td>{{i.tel}}</td>
+            <td>{{i.email}}</td><td>{{i.address}}</td>
+        </tr>
+
