--- a/notice/templates/notice/showpostdetail.html
+++ b/notice/templates/notice/showpostdetail.html
@@ -10,6 +10,7 @@
 <body>
 <meta charset="UTF-8">
     <title>Title</title>
+    {% include 'navi.html'%}
     <h1>공지사항 상세보기 페이지</h1>
         <form method="post" name="form1" id="form1" action="postinsert" enctype="multipart/form-data">
       {% csrf_token %}
@@ -46,21 +47,7 @@
     좋아요 수 :<input type="text" value="{{post_detail.3}}" id="likeCnt" style="text-align:right;width:30px;" >
     </div>
 </p>
-<div>
-  <table>
-    댓글 {{post_detail.5}}
-                {% for hang in reply_detail %}
-                <tr>
-                    <td>{{hang.0}}</td>
-                    <td>{{hang.1}}</td>
-                    <td>{{hang.2}}</td>
-                    <td>{{hang.3}}</td>
-                </tr>
-                {% endfor %}
-  </table>
-      <textarea name="reply" id="reply" rows="5" style="resize:none;width:100%"readonly></textarea>
-      <input type="submit" value="댓글쓰기" style="text-align:right">
-</div>
+{% include 'reply.html'%}
     <div style="text-align:right">
         <input type="hidden" name="post_seq" id="post_seq" value="{{post_seq}}">
         <input type="hidden" name="bb_type" id="bb_type" value=0>
