--- a/notice/templates/notice/showpostlist.html
+++ b/notice/templates/notice/showpostlist.html
@@ -71,7 +71,7 @@
         });
         $(function(){
             $('#addrListBtn').click(function(){
-                location="/notice/showpostupdate?post_seq="+$();
+                location="/notice/showpostlist"
             });
         });
     </script>
