--- a/help/templates/help/showpostdetail.html
+++ b/help/templates/help/showpostdetail.html
@@ -1,10 +1,78 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <style>
+        input {
+            border:none;
+        }
+    </style>
 </head>
 <body>
+<meta charset="UTF-8">
+    <title>Title</title>
+    {% include 'navi.html'%}
+    <h1>체리야 도와줘 상세페이지</h1>
+        <form method="post" name="form1" id="form1" action="postinsert" enctype="multipart/form-data">
+      {% csrf_token %}
+<fieldset>
+    <div id="title_area">
+<legend>체리야 도와줘</legend>
+<p>
+<label for="title">
+        제목 :
+    </label>
+    <input type="text" name="title" id="title" value="{{post_detail.0}}" readonly>
+</p>
+    <p style="text-align:right">
+<label for="writer" >
+    </label>
+    <input type="text" name="writer" id="writer" value="{{post_detail.1}}" style="width:50px;" readonly>
+</p>
+<p style="text-align:right">
+<label for="time" >
+    </label>
+    <input type="text" name="time" id="time" value="{{post_detail.2}}" style="text-align:right" readonly>
+</p>
+    </div>
+    <p>작성내용 :</p>
+<label for="content">
+    </label>
+    <textarea name="content" id="content" cols="30" rows="10" style="resize:none;width:100%" readonly>{{post_detail.3}}</textarea>
+</p>
 
+<p>
+
+
+    <div style="text-align:right">
+    좋아요 수 :<input type="text" value="{{post_detail.4}}" id="likeCnt" style="text-align:right;width:30px;" >
+    </div>
+</p>
+{% include 'reply.html'%}
+    <div style="text-align:right">
+        <input type="hidden" name="post_seq" id="post_seq" value="{{post_seq}}">
+        <input type="hidden" name="bb_type" id="bb_type" value=0>
+        <input type="hidden" name="univ" id="univ" value="서울대학교">
+        <input type="hidden" name="writer_seq" id="writer_seq" value=6>
+        <input type="button" value="목록" id="listBtn">
+        <input type="button" value="수정" id="updateBtn">
+        <input type="button" value="삭제" id="deleteBtn">
+    </div>
+</fieldset>
+</form>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+        $(function(){
+            $('#listBtn').click(function(){
+                location = '/help/showpostlist';
+            });
+
+            $('#updateBtn').click(function(){
+                location = '/help/showpostupdate?post_seq='+$('#post_seq').val();
+            });
+           $('#deleteBtn').click(function(){
+                location = '/help/postdelete?post_seq='+$('#post_seq').val();
+            });
+        });
+    </script>
 </body>
 </html>
