--- a/delivery/templates/delivery/showpostlist.html
+++ b/delivery/templates/delivery/showpostlist.html
@@ -2,20 +2,91 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>체리야 도와줘 게시글 목록</title>
+    <title>체리는 배달중 게시글 목록</title>
     {% include 'navi.html'%}
-    <h1>체리는 배달중 게시글 목록</h1>
+    <h1 style="text-align:center">체리는 배달중 게시글 목록</h1>
+<style>
+    table {
+        margin-right:auto;
+        margin-left:auto;
+    }
+    a {
 
-    <input type="button" value="글쓰기" id="wrtBtn" name="wrtBtn">
+    }
+</style>
 </head>
 <body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script>
-    $(function(){
-        $('#wrtBtn').click(function(){
-            location = '/delivery/showpostwrite';
+<div id="content" style="text-align:center">
+    <div class="row1">
+        <form method="post" action=""> <!-- action을 비워두면 자기 자신한테 간다.-->
+            {% csrf_token %}
+        <table class="table table-striped" style="text-align:center">
+            <thead class="thead-dark">
+            <tr>
+                    <td>글번호</td>
+                    <td>가게이름</td> <!-- 이름을 누르면 이름의 idx를 담아서 detail로 이동-->
+                    <td>제목</td>
+                    <td>종료시간</td>
+                    <td>참여 가능 여부</td>
+                    <td>현재 참여 인원</td>
+                    <td>작성자</td>
+                    <td>작성시간</td>
+                    <td>댓글 수</td>
+            </tr>
+            </thead>
+            <tbody>
+                {% for hang in delivery_list %}
+                <tr>
+                    <td>{{hang.0}}</td>
+                    <td>{{hang.1}}</td>
+                    <td>{{hang.2}}</td>
+                    <td>{{hang.3}}</td>
+                    {% if hang.4 == 0 %}
+                        <td><input type="button" onClick="location.href='/delivery/showpostdetail?post_seq={{hang.0}}'" value="참여가능"></td>
+                    {% else %}
+                        <td>참여불가</td>
+                    {% endif %}
+                    <td>{{hang.5}}</td>
+                    <td>{{hang.6}}</td>
+                    <td>{{hang.7}}</td>
+                    <td>{{hang.8}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+            <tfoot>
+                <tr>
+                    <th colspan="5" class="text-center">
+
+                    </th>
+                </tr>
+                <tr>
+                    <th colspan="5" class="text-center">
+                        <input type="hidden" name="cur_page" value="{{addr_list.number}}">
+                        <input type="text" name="searchValue" id="searchValue">
+                        <input type="submit" value="search">
+                        <input type="button" style="float:right" value="전체 목록" id="addrListBtn" >
+                    </th>
+                </tr>
+                <tr><th colspan="5" class="text-center">
+                    <input type="button" value="글쓰기" id="wrtBtn" name="wrtBtn">
+                </th></tr>
+            </tfoot>
+        </table>
+        </form>
+    </div>
+</div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+        $(function(){
+            $('#wrtBtn').click(function(){
+                location = '/delivery/showpostwrite';
+            });
         });
-    });
-</script>
+        $(function(){
+            $('#addrListBtn').click(function(){
+                location="/delivery/showpostlist"
+            });
+        });
+    </script>
 </body>
 </html>
