--- a/help/templates/help/showpostlist.html
+++ b/help/templates/help/showpostlist.html
@@ -1,50 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-
-<meta charset="UTF-8">
-<title>체리야 도와줘</title>
-    {% include 'navi.html'%}
-    <link type="text/css" href="/static/css/container.article.css" rel="stylesheet">
-   <style>
-ul{
-   list-style:none;
-   }
-</style>
-</head>
-<body style>
-<div id="container" class="article">
-    <h1>체리야 도와줘</h1>
-   <div class="wrap articles">
- {% for e in post_list %}
-<article>
-   <a class="article" href="/help/showpostdetail?post_seq={{e.0}}" style="text-decoration : none;">
-       <h2 class="medium">{{e.1}}</h2>
-       <p class="small">{{e.2}}</p>
-       <time class="small">{{e.3}}</time>
-       <h3 class="small">{{e.4}}</h3>
-          <ul class="status">
-             <li title="좋아요 수" class="vote">{{e.5}}</li>
-             <li title="댓글 수" class="comment">{{e.6}}</li>
-          </ul>
-       <hr>
-       <input type="hidden" name="227189837_comment_anonym" value="0">
-   </a>
-</article>
+    <head>
+        <meta charset="UTF-8">
+        <title>체리야 도와줘</title>
+        {% include 'navi.html'%}
+        <link type="text/css" href="/static/css/container.article.css" rel="stylesheet">
+       <style>
+        ul {
+           list-style:none;
+        }
+        </style>
+    </head>
+    <body>
+        <div id="container" class="article">
+            <h1>체리야 도와줘</h1>
+            <div class="wrap articles">
+            {% for e in post_list %}
+            <article>
+                <a class="article" href="/help/showpostdetail?post_seq={{e.0}}" style="text-decoration : none;">
+                   <h2 class="medium">{{e.1}}</h2>
+                   <p class="small">{{e.2}}</p>
+                   <time class="small">{{e.3}}</time>
+                   <h3 class="small">{{e.4}}</h3>
+                    <ul class="status">
+                         <li title="좋아요 수" class="vote">{{e.5}}</li>
+                         <li title="댓글 수" class="comment">{{e.6}}</li>
+                    </ul>
+                    <hr>
+                    <input type="hidden" name="227189837_comment_anonym" value="0">
+                </a>
+            </article>
            {% endfor %}
-    <input type="button" name="wrtBtn" id="wrtBtn" value="글쓰기" style="text-align:right">
-
-      </div>
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script>
-    $(function(){
-        $('#wrtBtn').click(function(){
-            location='/help/showpostwrite'
-        });
-    });
-</script>
-</body>
+            <input type="button" name="wrtBtn" id="wrtBtn" value="글쓰기" style="text-align:right">
+            </div>
+        </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script>
+            $(function(){
+                $('#wrtBtn').click(function(){
+                    location='/help/showpostwrite'
+                });
+            });
+        </script>
+    </body>
 </html>
 
 
