--- a/help/templates/help/showpostwrite.html
+++ b/help/templates/help/showpostwrite.html
@@ -1,43 +1,45 @@
-{% include 'navi.html'%}
-<div id="contents">
-    <h1>체리야 도와줘 글쓰기 창입니다.</h1>
-       <form method="post" name="form1" id="form1" action="postinsert" enctype="multipart/form-data">
-      {% csrf_token %}
-<fieldset>
-<legend>체리야 도와줘</legend>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Title</title>
+        {% include 'navi.html'%}
+    </head>
+    <body>
+        <div id="contents">
+            <h1>체리야 도와줘 글쓰기 창입니다.</h1>
+            <form method="post" name="form1" id="form1" action="postinsert" enctype="multipart/form-data">
+                {% csrf_token %}
+                <fieldset>
+                    <legend>체리야 도와줘</legend>
 
-<p>
-<label for="title">
-        제목 :
-    </label>
-    <input type="text" name="title" id="title" >
-</p>
-    <p>작성내용 :</p>
-<label for="content">
-    </label>
-    <textarea name="content" id="content" cols="30" rows="10" placeholder=""></textarea>
-</p>
-<p>
-<label for="file1">
-        첨부 이미지 :
-    </label>
-    <input type="file" name="file1" id="file1">
-</p>
-<p>
-    <input type="hidden" name="bb_type" id="bb_type" value=1>
-    <input type="hidden" name="univ" id="univ" value="서울대학교">
-    <input type="hidden" name="writer_seq" id="writer_seq" value=6>
-    <input type="submit" id="wrtBtn" value="등록">
-    <input type="button" value="목록" id="listBtn">
-</p>
-</fieldset>
-</form>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js%22%3E"></script>
-<script>
+                    <p>
+                    <label for="title">
+                            제목 :
+                        </label>
+                        <input type="text" name="title" id="title" >
+                    </p>
+                    <p>작성내용 :</p>
+                    <label for="content"></label>
+                    <textarea name="content" id="content" cols="30" rows="10" placeholder=""></textarea>
 
-</script>
-</head>
-</div>
-<div id="footer"></div>
-</body>
+                    <p>
+                    <label for="file1">
+                            첨부 이미지 :
+                        </label>
+                        <input type="file" name="file1" id="file1">
+                    </p>
+                    <p>
+                        <input type="hidden" name="bb_type" id="bb_type" value=1>
+                        <input type="hidden" name="univ" id="univ" value="서울대학교">
+                        <input type="hidden" name="writer_seq" id="writer_seq" value=6>
+                        <input type="submit" id="wrtBtn" value="등록">
+                        <input type="button" value="목록" id="listBtn">
+                    </p>
+                </fieldset>
+            </form>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js%22%3E"></script>
+        </div>
+    <div id="footer"></div>
+    </body>
 </html>
