--- a/signup/templates/signup/signup.html
+++ b/signup/templates/signup/signup.html
@@ -9,7 +9,7 @@
     <body>
         <!-- header -->
         <div id="header">
-            <a href="{% url 'home:home' %}" target="_blank" title="MainPage"><img src="{% static 'images/Main_Cherry.jpg' %}" width="150"></a>
+            <a href="{% url 'home:login' %}" target="_blank" title="MainPage"><img src="{% static 'images/Main_Cherry.jpg' %}" width="150"></a>
         </div>
 
         <form method="post" action="{% url 'member:insert'%}">{% csrf_token %}
