--- a/help/templates/help/showpostupdate.html
+++ b/help/templates/help/showpostupdate.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Chemistrry : help</title>
     </head>
     <body>
+        {% include 'navi.html'%}
         <h1>체리야 도와줘 수정 페이지</h1>
         <form method="post" name="form1" id="form1" action="postupdate" enctype="multipart/form-data">
             {% csrf_token %}
