--- a/notice/templates/notice/showpostwrite.html
+++ b/notice/templates/notice/showpostwrite.html
@@ -1,47 +1,47 @@
-{% include 'navi.html'%}
-<div id="contents">
-    <h1>공지사항 글쓰기 창입니다.</h1>
-    <form method="post" name="form1" id="form1" action="postinsert" enctype="multipart/form-data">
-      {% csrf_token %}
-<fieldset>
-<legend>공지사항</legend>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Chemistrry: notice</title>
+    </head>
 
-<p>
-<label for="title">
-        제목 :
-    </label>
-    <input type="text" name="title" id="title" >
-</p>
-    <p>작성내용 :</p>
-<label for="content">
-    </label>
-    <textarea name="content" id="content" cols="30" rows="10" placeholder=""></textarea>
-</p>
-<p>
-<label for="file1">
-        첨부 이미지 :
-    </label>
-    <input type="file" name="file1" id="file1">
-</p>
-<p>
-    <input type="hidden" name="bb_type" id="bb_type" value=0>
-    <input type="hidden" name="univ" id="univ" value="서울대학교">
-    <input type="hidden" name="writer_seq" id="writer_seq" value=6>
-    <input type="submit" id="wrtBtn" value="등록">
-    <input type="button" value="목록" id="listBtn">
-</p>
-</fieldset>
-</form>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script>
-        $(function(){
-            $('#listBtn').click(function(){
-                location = '/notice/showpostlist';
-            });
-        });
-    </script>
-</head>
-</div>
-<div id="footer"></div>
-</body>
-</html>
+    <body>
+        {% include 'navi.html'%}
+        <div id="contents">
+            <h1>공지사항 글쓰기</h1>
+            <form method="post" action="postinsert">
+              {% csrf_token %}
+                <fieldset>
+                    <legend>공지사항</legend>
+
+                    <p>
+                        <label for="title">
+                            제목 :
+                        </label>
+                        <input type="text" name="title" id="title" >
+                    </p>
+
+                    <p>작성내용 :</p>
+                    <label for="content"></label>
+                    <textarea name="content" id="content" cols="30" rows="10" placeholder=""></textarea>
+                    <p>
+                        <input type="hidden" name="bb_type" id="bb_type" value=0>
+                        <input type="hidden" name="univ" id="univ" value="서울대학교">
+                        <input type="hidden" name="writer_seq" id="writer_seq" value=6>
+                        <input type="submit" id="wrtBtn" value="등록">
+                        <input type="button" value="목록" id="listBtn">
+                    </p>
+                    </fieldset>
+            </form>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+            <script>
+                $(function(){
+                    $('#listBtn').click(function(){
+                        location = '/notice/showpostlist';
+                    });
+                });
+            </script>
+        </div>
+        <div id="footer"></div>
+    </body>
+</html> 
