--- a/help/templates/help/showpostlist.html
+++ b/help/templates/help/showpostlist.html
@@ -2,8 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>체리야 도와줘</title>
-        {% include 'navi.html'%}
+        <title>Chemistrry : help</title>
         <link type="text/css" href="/static/css/container.article.css" rel="stylesheet">
        <style>
         ul {
@@ -12,12 +11,13 @@
         </style>
     </head>
     <body>
+        {% include 'navi.html'%}
         <div id="container" class="article">
             <h1>체리야 도와줘</h1>
             <div class="wrap articles">
             {% for e in post_list %}
             <article>
-                <a class="article" href="/help/showpostdetail?post_seq={{e.0}}" style="text-decoration : none;">
+                <a class="article" href="{% url 'help:showpostdetail' post_seq=e.0 %}" style="text-decoration : none;">
                    <h2 class="medium">{{e.1}}</h2>
                    <p class="small">{{e.2}}</p>
                    <time class="small">{{e.3}}</time>
