--- a/help/templates/help/showpostwrite.html
+++ b/help/templates/help/showpostwrite.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
-        {% include 'navi.html'%}
+        <title>Chemistrry : help</title>
     </head>
     <body>
+        {% include 'navi.html'%}
         <div id="contents">
             <h1>체리야 도와줘 글쓰기 창입니다.</h1>
             <form method="post" name="form1" id="form1" action="postinsert" enctype="multipart/form-data">
