--- a/help/templates/help/showpostlist.html
+++ b/help/templates/help/showpostlist.html
@@ -38,7 +38,7 @@
         <script>
             $(function(){
                 $('#wrtBtn').click(function(){
-                    location='/help/showpostwrite'
+                    location='{% url 'help:showpostwrite' %}'
                 });
             });
         </script>
