--- a/help/templates/help/showpostupdate.html
+++ b/help/templates/help/showpostupdate.html
@@ -7,7 +7,7 @@
     <body>
         {% include 'navi.html'%}
         <h1>체리야 도와줘 수정 페이지</h1>
-        <form method="post" name="form1" id="form1" action="postupdate" enctype="multipart/form-data">
+        <form method="post" name="form1" id="form1" action="{% url 'help:postupdate' post_seq=post_seq %}">
             {% csrf_token %}
             <fieldset>
                 <legend>공지사항</legend>
@@ -30,7 +30,7 @@
                 <p>
                     <input type="hidden" name="post_seq" id="post_seq" value="{{post_seq}}">
                     <input type="button" value="목록" id="listBtn">
-                    <input type="submit" id="wrtBn" value="등록">
+                    <input type="submit" id="wrtBtn" value="등록">
                     <input type="button" value="삭제" id="deleteBtn">
                 </p>
             </fieldset>
@@ -39,7 +39,10 @@
         <script>
             $(function(){
                 $('#listBtn').click(function(){
-                    location = '/help/showpostlist';
+                    location = '{% url 'help:showpostlist' %}';
+                });
+                $('#deleteBtn').click(function(){
+                    location = '{% url 'help:postdelete' post_seq=post_seq %}';
                 });
             });
         </script>
