--- a/notice/templates/notice/showpostwrite.html
+++ b/notice/templates/notice/showpostwrite.html
@@ -22,12 +22,9 @@
                     </p>
 
                     <p>작성내용 :</p>
-                    <label for="content"></label>
-                    <textarea name="content" id="content" cols="30" rows="10" placeholder=""></textarea>
+                    <label for="post_content"></label>
+                    <textarea name="post_content" id="post_content" cols="30" rows="10" placeholder=""></textarea>
                     <p>
-                        <input type="hidden" name="bb_type" id="bb_type" value=0>
-                        <input type="hidden" name="univ" id="univ" value="서울대학교">
-                        <input type="hidden" name="writer_seq" id="writer_seq" value=6>
                         <input type="submit" id="wrtBtn" value="등록">
                         <input type="button" value="목록" id="listBtn">
                     </p>
