--- a/help/templates/help/showpostdetail.html
+++ b/help/templates/help/showpostdetail.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Chemistrry: notice</title>
+        <title>Chemistrry : help</title>
         <style>
             input {
                 border:none;
@@ -11,36 +11,36 @@
     </head>
     <body>
         {% include 'navi.html'%}
-        <h1>공지사항 상세보기 페이지</h1>
-        <form method="post" name="form" id="form">
+        <h1>체리야 도와줘 상세페이지</h1>
+        <form method="post" name="form1" id="form1" action="postinsert" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset>
                 <div id="title_area">
-                    <legend>공지사항</legend>
+                    <legend>체리야 도와줘</legend>
                     <p>
-                        <label for="title">제목 : </label>
-                        <input style = "width:1000px" type="text" name="title" id="title" value="{{post_detail.0}}" readonly>
+                        <label for="title">
+                            제목 :
+                        </label>
+                        <input type="text" name="title" id="title" value="{{post_detail.0}}" readonly>
                     </p>
                     <p style="text-align:right">
-                        <label for="writer" ></label>
+                        <label for="writer"></label>
                         <input type="text" name="writer" id="writer" value="{{post_detail.1}}" style="width:50px;" readonly>
                     </p>
                     <p style="text-align:right">
-                        <label for="time" ></label>
-                        <input type="text" name="time" id="time" value="{{post_detail.3}}" style="text-align:right" readonly>
+                        <label for="time"></label>
+                        <input type="text" name="time" id="time" value="{{post_detail.2}}" style="text-align:right" readonly>
                     </p>
                 </div>
-
                 <p>작성내용 :</p>
                 <label for="content"></label>
-                <textarea name="content" id="content" cols="30" rows="10" style="resize:none;width:100%" readonly>{{post_detail.2}}</textarea>
+                <textarea name="content" id="content" cols="30" rows="10" style="resize:none;width:100%" readonly>{{post_detail.3}}</textarea>
 
                 <div style="text-align:right">
                     <input type="button" value="목록" id="listBtn">
                     <input type="button" value="수정" id="updateBtn">
                     <input type="button" value="삭제" id="deleteBtn">
                 </div>
-                <!--TODO: view_count-->
             </fieldset>
         </form>
         {% include "reply.html"%}
@@ -49,15 +49,15 @@
         <script>
             $(function(){
                 $('#listBtn').click(function(){
-                    location = '{% url 'notice:showpostlist' %}';
+                    location = '{% url 'help:showpostlist' %}';
                 });
 
                 $('#updateBtn').click(function(){
-                    location = "{% url 'notice:showpostupdate' post_seq=post_seq%}";
+                    location = "{% url 'help:showpostupdate' post_seq=post_seq%}";
                 });
 
                $('#deleteBtn').click(function(){
-                    location = "{% url 'notice:postdelete' post_seq=post_seq%}";
+                    location = "{% url 'help:postdelete' post_seq=post_seq%}";
                 });
             });
         </script>
