--- a/help/templates/help/showpostupdate.html
+++ b/help/templates/help/showpostupdate.html
@@ -7,7 +7,7 @@
     <body>
         {% include 'navi.html'%}
         <h1>체리야 도와줘 수정 페이지</h1>
-        <form method="post" name="form1" id="form1" action="postupdate" enctype="multipart/form-data">
+        <form method="post" name="form" id="form" action="{% url 'help:postupdate' post_seq=post_seq %}">
             {% csrf_token %}
             <fieldset>
                 <legend>공지사항</legend>
