--- a/reply/templates/reply.html
+++ b/reply/templates/reply.html
@@ -1,17 +1,19 @@
 <div>
+
   <table>
-    댓글 {{post_detail.5}} 개
+    댓글 {{reply_count.0}} 개
                 {% for hang in reply_detail %}
                 <tr>
                     <td>{{hang.0}}</td>
+                </tr>
+                <tr>
+                    <td>                          </td>
                     <td>{{hang.1}}</td>
-                    <td>{{hang.2}}</td>
-                    <td>{{hang.3}}</td>
                     <td><input type="button" name="update" value="수정"></td>
                     <td><input type="button" name="delete" value="삭제"></td>
                 </tr>
                 {% endfor %}
   </table>
-      <textarea name="reply" id="reply" rows="5" style="resize:none;width:100%"readonly></textarea>
-      <input type="submit" value="댓글쓰기" style="text-align:right">
+      <textarea name="reply" id="reply" rows="5" style="resize:none;width:100%"></textarea>
+      <input type="button" id="replyWrtBtn" name="replyWrtBtn" value="댓글쓰기" style="text-align:right">
 </div>
