--- a/home/templates/navi.html
+++ b/home/templates/navi.html
@@ -1,5 +1,6 @@
   <div style="text-align:right">
     <a href="{% url 'home:home'%}" title="홈으로 돌아가기">홈</a>
+    <a href="{% url 'mypage:myinfo'%}" title="마이페이지">마이페이지</a>
     <a href="{% url 'notice:showpostlist'%}" title="공지사항">공지사항</a>
     <a href="{% url 'help:showpostlist'%}"  title="체리야 도와줘">체리야 도와줘</a>
   </div>
