--- a/reply/templates/reply.html
+++ b/reply/templates/reply.html
@@ -1,17 +1,29 @@
 <div>
-  <table>
-    댓글 {{post_detail.5}} 개
-                {% for hang in reply_detail %}
-                <tr>
-                    <td>{{hang.0}}</td>
-                    <td>{{hang.1}}</td>
-                    <td>{{hang.2}}</td>
-                    <td>{{hang.3}}</td>
-                    <td><input type="button" name="update" value="수정"></td>
-                    <td><input type="button" name="delete" value="삭제"></td>
-                </tr>
-                {% endfor %}
-  </table>
-  <textarea name="reply" id="reply" rows="5" style="resize:none;width:100%"readonly></textarea>
-  <input type="submit" value="댓글쓰기" style="text-align:right">
+    <table>
+        {% for hang in reply_detail %}
+        <tr>
+            <td><input id="content" value="{{hang.0}}"></td>
+            <td>{{hang.1}}</td>
+            <td>{{hang.2}}</td>
+            <td><input type="button" id="update" value="수정"></td>
+            <td><input type="button" id="delete" value="삭제" onclick="location.href='{% url 'reply:delete_reply' reply_seq=hang.3 post_seq=post_seq%}'"></td>
+        </tr>
+        {% endfor %}
+    </table>
+    <form method="post" action="{% url 'reply:reply_write' post_seq=post_seq %}">
+        {% csrf_token %}
+        <textarea name="reply_comment" id="reply_comment" rows="5" style="resize:none;width:100%"></textarea>
+        <input type="submit" value="댓글쓰기" style="text-align:right">
+    </form>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+        window.onload = function(){
+            $("#content").attr('readonly', true);
+        }
+        $(function(){
+            $("#update").click(function(){
+
+            });
+        });
+    </script>
 </div>
